# sgnm

./: .gitignore  .rex.toml  README.md  pyproject.toml  requirements.txt  setup.py  train_vae_allatom.py
configs/: config-equivariant.toml  config-gnm-noise0_1.toml  config-gnm-noise0_5.toml  config-gnm-noise1_0.toml  config-gnm.toml  config-hybrid.toml  example.toml
examples/: initial.cif  new_coords.cif  new_latent.cif  predict_equivariant.py  predict_gnm.py  rank_decoys.py  relax.py  relax_coords.py  relax_latent.py  relaxed.cif  relaxed_gaussian.cif  score1.py  score2.py  score_structure.py
examples/structures/: 9GBZ.cif
scripts/: config.toml  evaluate.py  evaluate_ranking.py  noise_sweep.py  rank.py  ranking_noise_sweep.py  train.py
sgnm/: __init__.py  __main__.py  _version.py  config.py  data.py  equivariant.py  gnm.py  hybrid.py  layers.py  losses.py  models.py  nn.py  schedulers.py  scoring.py  train.py  training.py
sgnm/vae/: __init__.py  config.py  data.py  decoder.py  encoder.py  layers.py  losses.py  model.py  training.py
tests/: test_equivariant.py  test_metric.py  test_model.py  test_scoring.py
