[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "sgnm"
version = "2.0.0"
description = "Predict RNA chemical probing reactivity from 3D structure"
license = "CC-BY-NC-4.0"
authors = [
    { name = "Hamish M. Blair", email = "hmblair@stanford.edu" },
]
urls = { Homepage = "https://github.com/hmblair/sgnm" }
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0",
    "ciffy",
    "h5py",
    "tqdm",
    "dlu",
]

[tool.setuptools.packages.find]
include = ["sgnm*"]

[project.optional-dependencies]
equivariant = ["flash-eq>=0.1.0"]
train = ["wandb", "matplotlib"]
