[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sgnm"
dynamic = ["version"]
description = "Predict RNA chemical probing reactivity from 3D structure"
license = "MIT"
authors = [
    { name = "Hamish M. Blair", email = "hmblair@stanford.edu" },
]
urls = { Homepage = "https://github.com/hmblair/sgnm" }
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0",
    "ciffy",
    "h5py",
    "tqdm",
    "dlu",
]

[tool.setuptools.packages.find]
include = ["sgnm*"]

[project.optional-dependencies]
equivariant = ["flash-eq>=0.1.0"]
train = ["wandb", "matplotlib"]

[tool.setuptools_scm]
version_scheme = "guess-next-dev"
local_scheme = "node-and-date"
tag_regex = "^v(?P<version>.*)$"
write_to = "sgnm/_version.py"
fallback_version = "0.0.0.dev0"
